--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ subtitle: "打码改变人生"
 description: "王鑫的个人博客"
 keywords: 码志, Hsin wang, mzlogin, mazhuang
 favicon: /favicon.ico
-timezone: Asia/Nanjin
+timezone: Asia/Nanjing
 encoding: "utf-8"
 side_bar_repo_limit: 5
 
@@ -17,9 +17,9 @@ side_bar_repo_limit: 5
 #      Author      #
 # ---------------- #
 author: Hsin wang
-organization: Fnst,Co.,Ltd
+organization: Fnst Co.,Ltd.
 organization_url: http://www.fujitsu.com/cn/fnst/com
-location: Nanjin, China
+location: Nanjing, China
 email: 15951651598@163.com
 
 # ---------------- #
@@ -77,7 +77,7 @@ collections:
         output: true
         permalink: /wiki/:path/
 
-repository: mzlogin/mzlogin.github.io
+repository: hsinin/hsinin.github.io
 
 # ---------------- #
 #      Socials     #
@@ -96,8 +96,8 @@ twitter_username: mzlogin
 comments_provider: disqus
 # !!!重要!!! 请修改下面两个用户名为你自己申请的
 # !!!Important!!! Please modify usernames below to yours
-duoshuo_username: mazhuang
-disqus_username: mzlogin
+duoshuo_username: hsin wang
+disqus_username: hsin wang
 # 在使用 disqus 的时候可点击显示多说评论框
 lazy_load_duoshuo: true
 
