--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl:
 url: https://hsinin.github.io
 date_format: "ordinal"
 title: blog
-subtitle: "打码改变人生"
+subtitle: "认真你就赢了"
 description: "王鑫的个人博客"
 keywords: 
 favicon: /favicon.ico
