--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 baseurl:
 url: https://hsinin.github.io
 date_format: "ordinal"
-title: Hsinin
+title: Hsin
 subtitle: "认真你就赢了"
 description: "王鑫的个人博客"
 keywords: 
